[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[metadata]
name = loop-dhs
description = Distributed Hardware Server for loop detection and classification.
author = Scott Classen
author-email = sclassen@lbl.gov
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/dsclassen/loop-dhs
project-urls = 
	Documentation = https://loop-dhs.readthedocs.io
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = PyYAML
	dotty-dict
	coloredlogs
	verboselogs
	opencv-python-headless
	matplotlib
	scipy
	requests

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	loopDHS = loop_dhs.loopDHS:run

[test]
extras = True

[tool:pytest]
addopts = 
	--cov loop_dhs --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 3.2.3
package = loop_dhs
